# EOS-Playbook

./: .PassByzantineTestnet  .PassKylin  .gitignore  CMakeLists.txt  EOS-Play.code-workspace  bp.json
contracts/: CMakeLists.txt
contracts/BidAdvatar/: BidAdvatar.abi  BidAdvatar.cpp  BidAdvatar.hpp  BidAdvatar.wasm  BidAdvatar.wast  CMakeLists.txt
contracts/BidAdvatar/scripts/: test-addcampaigns.sh  test-addpublisher.sh
contracts/Marketplace/: Marketplace.abi  Marketplace.cpp  Marketplace.hpp
contracts/Players/: Players.abi  Players.cpp  Players.hpp  Players.wasm  Players.wast
contracts/eosio.token/: eosio.token.cpp
contracts/everipediaiq/: everipediaiq.cpp
contracts/theexchange/: exchange.cpp
jungle-testnet-docker/: config.ini  docker-compose.yml  jungletestnetdockerfile
local-testnet/: 01-initlocaltestnetnode.sh  02-runlocaltestnetnode.sh  03-createwalletandaccounts.sh  04-deploytokenanddistro.sh  05-deployexchangeandtest.sh
local-testnet-docker/: docker-compose.yml
scripts/Exchange/: ExchangeTest.sh
scripts/General/: build-hello-world.sh  build-tictactoe.sh  create-account-helloworld.sh  create-account.sh  scratc.cpp  snippets.sh  test-hello-world.sh
scripts/Players/: create-account.sh  create-build.sh  create-token-distro.sh  create-token.sh  create-wallet.sh  manual-deploy.sh  test-addability.sh  test-addplayer.sh  test-addproducts.sh  test-buyproducts.sh  test-getplayer.sh  test-updateplayer.sh
